refactor: extract sql builder class and use cql parser for cql queries